WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231377
Misc compiler warning fixes, October 2021
https://bugs.webkit.org/show_bug.cgi?id=231377
Summary
Misc compiler warning fixes, October 2021
Michael Catanzaro
Reported
2021-10-07 11:23:26 PDT
We have some -Wreturn-type warnings, and a -Wdeprecated-declarations for an XSS auditor setting test that can simply be removed now that XSS auditor no longer exists.
Attachments
Patch
(4.55 KB, patch)
2021-10-07 11:25 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2021-10-07 11:25:40 PDT
Created
attachment 440515
[details]
Patch
EWS
Comment 2
2021-10-07 12:57:10 PDT
Committed
r283736
(
242658@main
): <
https://commits.webkit.org/242658@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 440515
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug