Misc compiler warning fixes, October 2021 https://bugs.webkit.org/show_bug.cgi?id=231377

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-10-07
Reviewed by Adrian Perez de Castro.

Source/WebCore:

Fix -Wreturn-type warnings.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::fontPaletteFromStyle):
* css/CSSFontPaletteValuesRule.cpp:
(WebCore::CSSFontPaletteValuesRule::basePalette const):
* platform/graphics/opengl/GraphicsContextGLOpenGL.cpp:
(WebCore::GraphicsContextGLOpenGL::releaseThreadResources):

Tools:

Stop testing the default value of the XSS auditor setting. I could have used
IGNORE_DEPRECATED_DECLARATIONS_BEGIN instead, but I see no point in testing the default
value of a setting that no longer does anything.

* TestWebKitAPI/Tests/WebKit/WKPreferences.cpp:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/242658@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283736 268f45cc-cd09-0410-ab3c-d52691b4dbfc